# Robotiina

./: .gitignore  Arduino.cpp  Arduino.h  Audrino.cpp  Audrino.h  AutoPilot.cpp  AutoPilot.h  BallFinder.cpp  BallFinder.h  CMakeCache.txt  CMakeLists.txt  ComPortScanner.cpp  ComPortScanner.h  GateFinder.cpp  ImageThresholder.h  Makefile  MouseFinder.cpp  MouseFinder.h  NewAutoPilot.cpp  NewAutoPilot.h  README.md  RobotTracker.cpp  RobotTracker.h  Robotiina.cpp  Robotiina.sln  Robotiina.vcxproj  Robotiina.vcxproj.filters  ThreadedClass.cpp  ThreadedClass.h  VideoRecorder.cpp  WheelEmulator.vcxproj  WheelEmulator.vcxproj.filters  _stdafx.cpp  autocalibrator.cpp  autocalibrator.h  blockingreader.h  calibrationconfreader.cpp  camera.cpp  camera.h  cmake_install.cmake  (+32 more)
conf/: Ball.ini  Gate.ini
